# investment-ai

./: .gitignore  README.md  launch.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  __init__.py  main.py  requirements.txt  schemas.py
backend/agents/: __init__.py  agent.py  graham_control.py  graham_policy.py  investment_advisor_prompt.py  prompt_graham.py
backend/api/: routes.py
backend/config/: __init__.py  config.py  open_ai_key.txt
backend/config/prompts/: graham_system_prompt.example.md
backend/db/: vector_db.py
backend/db/data/: graham_chunks.txt
backend/db/graham_db/: chroma.sqlite3
backend/services/: investment_advisor_service.py  knowledge_repository.py  market_data_service.py  query_service.py  valuation_service.py
backend/services/functions/: stock_data.py
backend/tests/: test_graham_control.py  test_graham_policy.py  test_investment_advisor_service.py  test_knowledge_retrieval.py  test_market_data_service.py  test_public_configuration.py  test_valuation_service.py  test_vector_db.py
backend/tests/chroma_db/: chroma.sqlite3
docs/: data-pipeline.md  deployment.md  threat-model.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  Test.tsx  index.css
