[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-ai"
version = "0.1.0"
description = "Full-stack investment research workspace with FastAPI, RAG, market data, and React."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.5",
  "openai==1.59.7",
  "python-dotenv==1.2.2",
  "requests==2.33.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["db/data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
